<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17CAA6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/grade"
        android:layout_width="274dp"
        android:layout_height="79dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/grade_calculator"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:text="Grade Calculator" />

    <EditText
        android:id="@+id/Quizes"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#1EE408"
        android:backgroundTint="#8BE864"
        android:ems="10"
        android:hint="@string/quizes_15"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/HomeWork"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#1EE408"
        android:backgroundTint="#8BE864"
        android:ems="10"
        android:hint="@string/homework_25"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Mid-Terms"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#1EE408"
        android:backgroundTint="#8BE864"
        android:ems="10"
        android:hint="@string/mid_terms_30"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/Final"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#1EE408"
        android:backgroundTint="#8BE864"
        android:ems="10"
        android:hint="@string/final_30"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/Calculate"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:text="@string/calculate" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="241dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/calculator" />

</LinearLayout>